fix funny border on menu on mobile

--- a/assets/less/source/responsive.less
+++ b/assets/less/source/responsive.less
@@ -128,6 +128,9 @@
             position: absolute;
             //.opacity(0);
 
+            li {
+                margin:0;
+            }
             &.visible {
                 .opacity(0);
             }
